--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,4 @@
 client-openai-key: ${OPEN_AI_KEY}
-client-openai-endpoint: https://ai-proxy.lab.epam.com
+client-openai-endpoint: ${OPEN_AI_ENDPOINT}
 
 client-openai-deployment-name: gpt-35-turbo
