--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,9 +2,10 @@ client-openai-key: ${OPEN_AI_KEY}
 client-openai-endpoint: ${OPEN_AI_ENDPOINT}
 
 client-openai-deployment-name: gpt-35-turbo
-client-openai-deployment-name-image-generation: dall-e-3
+#client-openai-deployment-name-image-generation: dall-e-3
+client-openai-deployment-name-image-generation: stability.stable-diffusion-xl
 
 prompt-config-temperature: 0.8
-prompt-config-presence-max_tokens: 256
+prompt-config-presence-max_tokens: 1000
 prompt-config-presence-penalty: 0.0
 prompt-config-frequency-penalty: 0.0
